# Autonomous_GOKU

./: CMakeLists.txt  README.md  X11_To_Wayland.md  package.xml
Hardware_setup/: Test_diff_drive_hardware.cpp  X11_To_Wayland.md
Hardware_setup/SPI/: diffbot_system.cpp
Hardware_setup/SPI/include/: diffbot_system.hpp  stm32_spi_comms.hpp  visibility_control.h  wheel.hpp
RPI5/Ros2/launch/: velocity.py
STM32F4/: Pub_micro_ros.c  Test_full_control.c  stm32f4_hardware_interface.cpp
can_hardware/: CMakeLists.txt  can_hardware_interface.xml  package.xml
can_hardware/include/can_hardware/: can_bus_interface.hpp  can_hardware_interface.hpp
can_hardware/launch/: can_hardware_launch.py
can_hardware/src/: can_bus_interface.cpp  can_hardware_interface.cpp  main.cpp
config/: config.rviz  config2.rviz  config3.rviz  ekf.yaml  robot_control.yaml  twist_mux.yaml
launch/: blue_dot_control.py  main_launch.launch.py  main_launch2.launch.py  main_launch_xacro.launch.py  online_async_launch.py  robot_control.launch.py  robot_state_publisher.launch.py
meshes/DAE/base/: base_link.dae
meshes/DAE/wheel/: fl_wheel.dae  fr_wheel.dae
meshes/STL/base/: base_link.stl
meshes/STL/wheel/: fl_wheel.stl  fr_wheel.stl
urdf/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  rallp.urdf.xacro  rallp2.sdf  rallp2.urdf  rallp3.urdf  robot_core.xacro  ros2_control.xacro
world/: my_world.sdf  new_world.sdf
